--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title>  </title>
+	<title> Smores </title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -13,6 +13,249 @@
 </head>
 
 <body>
+	<header>
+		<nav>
+			<ul>
+				<li><a href="">Home</a></li>
+				<li><a href="">S'Mores Builder</a></li>
+			</ul>
+		</nav>
+		<section>
+			<div>
+				<figure>
+					<a href=""><h1>s'm</h1><img src="dist/img/marshmallow.png" alt="marshmallow"><h1>res</h1></a>
+				</figure>
+				<p>
+					Celebrate National S'mores Day Every Day
+				</p>
+			</div>
+		</section>
+		<nav>
+			<ul>
+				<li><a href="">Throw A Party</a></li>
+				<li><a href="">Tumblr</a></li>
+			</ul>
+		</nav>
+	</header>
+
+	<section class="intro">
+		<h2>S'mores Builder</h2>
+		<p>
+			This is your chance to get creative. As long as you have a roasted marshmallow sandwiched between something with some chocolate added, I say you got a s'mores. So pick your frame, marshmallow, and candy, add an optional accessory or two, and build a crazy s'mores concoction.
+		</p>
+	</section>
+
+	<section class="builder">
+		<div>
+			<img src="dist/img/graham.png" alt="graham">
+			<h3>Frame</h3>
+			<input type="radio" name="frame" value="graham crackers">
+				<label for="graham crackers">graham crackers</label>
+			<input type="radio" name="frame" value="cinnamon grahams">
+				<label for="cinnamon grahams">cinnamon grahams</label>
+			<input type="radio" name="frame" value="chocolate grahams">
+				<label for="chocolate grahams">chocolate grahams</label>
+			<input type="radio" name="frame" value="Fudge Stripe cookies">
+				<label for="Fudge Stripe cookies">Fudge Stripe cookies</label>
+			<input type="radio" name="frame" value="Oreos">
+				<label for="Oreos">Oreos</label>
+			<input type="radio" name="frame" value="chocolate chip cookies">
+				<label for="chocolate chip cookies">chocolate chip cookies</label>
+			<input type="radio" name="frame" value="Ritz crackers">
+				<label for="Ritz crackers">Ritz crackers</label>
+			<input type="radio" name="frame" value="other">
+				<label for="other">Other: </label> <input type="text" name="other-graham">​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​
+		</div>
+		<div>
+			<img src="dist/img/mallow.png" alt="marshmallow">
+			<h3>Marshmallow</h3>
+			<input type="radio" name="frame" value="plain marshmallow">
+				<label for="plain marshmallow">plain marshmallow</label>
+			<input type="radio" name="frame" value="chocolate 'mallow">
+				<label for="chocolate 'mallow">chocolate 'mallow</label>
+			<input type="radio" name="frame" value="strawberry 'mallow">
+				<label for="strawberry 'mallow">strawberry 'mallow</label>
+			<input type="radio" name="frame" value="giant 'mallow">
+				<label for="giant 'mallow">giant 'mallow</label>
+			<input type="radio" name="frame" value="other">
+				<label for="other">Other: </label> <input type="text" name="other-mallow">​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​
+		</div>
+		<div>
+			<img src="dist/img/chocolate.png" alt="chocolate">
+			<h3>Candy</h3>
+			<input type="radio" name="frame" value="Hershey's chocolate">
+				<label for="Hershey's chocolate">Hershey's chocolate</label>
+			<input type="radio" name="frame" value="dark chocolate">
+				<label for="dark chocolate">dark chocolate</label>
+			<input type="radio" name="frame" value="chocolate with almonds">
+				<label for="chocolate with almonds">chocolate with almonds</label>
+			<input type="radio" name="frame" value="Nutella">
+				<label for="Nutella">Nutella</label>
+			<input type="radio" name="frame" value="Reese's P.B. Cup">
+				<label for="Reese's P.B. Cup">Reese's P.B. Cup</label>
+			<input type="radio" name="frame" value="white chocolate">
+				<label for="white chocolate">white chocolate</label>
+			<input type="radio" name="frame" value="other">
+				<label for="other">Other: </label> <input type="text" name="other-candy">​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​
+		</div>
+		<div>
+			<img src="dist/img/star.png" alt="star">
+			<h3>Accessories</h3>
+			<input type="radio" name="frame" value="peanut butter">
+				<label for="peanut butter">peanut butter</label>
+			<input type="radio" name="frame" value="banana">
+				<label for="banana">banana</label>
+			<input type="radio" name="frame" value="strawberries">
+				<label for="strawberries">strawberries</label>
+			<input type="radio" name="frame" value="caramel sauce">
+				<label for="caramel sauce">caramel sauce</label>
+			<input type="radio" name="frame" value="cream cheese">
+				<label for="cream cheese">cream cheese</label>
+			<input type="radio" name="frame" value="bacon">
+				<label for="bacon">bacon</label>
+			<input type="radio" name="frame" value="other">
+				<label for="other">Other: </label> <input type="text" name="other-accessory">​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​
+		</div>
+		<section>
+			<label for="smore-name">Name Your S'mores: </label> <input type="text" name="smore-name">
+			<button>Build It</button>
+		</section>
+	</section>
+
+	<section class="inspiration">
+		<h4>Need Some Inspiration?</h4>
+		<div>
+			<h5>Classic</h5>
+			<ul>
+				<li>plain graham crackers</li>
+				<li>plain marshmallow</li>
+				<li>Hershey's chocolate</li>
+			</ul>
+		</div>
+		<div>
+			<h5>Elvis</h5>
+			<ul>
+				<li>chocolate graham crackers</li>
+				<li>plain marshmallow</li>
+				<li>Hershey's chocolate</li>
+				<li>peanut butter</li>
+				<li>banana</li>
+			</ul>
+		</div>
+		<div>
+			<h5>PB&J</h5>
+			<ul>
+				<li>plain graham crackers</li>
+				<li>plain marshmallow</li>
+				<li>Hershey's chocolate</li>
+				<li>peanut butter</li>
+				<li>strawberries</li>
+			</ul>
+		</div>
+		<div>
+			<h5>Chocolate-Covered Strawberry</h5>
+			<ul>
+				<li>chocolate graham crackers</li>
+				<li>plain marshmallow</li>
+				<li>dark chocolate</li>
+				<li>strawberries</li>
+			</ul>
+		</div>
+		<div>
+			<h5>Thanksgiving Casserole</h5>
+			<ul>
+				<li>cinnamon graham crackers</li>
+				<li>plain marshmallow</li>
+				<li>Hershey's chocolate</li>
+				<li>sweet potato puree</li>
+			</ul>
+		</div>
+		<div>
+			<h5>Nutty</h5>
+			<ul>
+				<li>almond thins cookies</li>
+				<li>plain marshmallow</li>
+				<li>Nutella</li>
+			</ul>
+		</div>
+		<div>
+			<h5>Banana Pudding</h5>
+			<ul>
+				<li>Nilla wafers</li>
+				<li>plain marshmallow</li>
+				<li>white chocolate</li>
+				<li>banana</li>
+			</ul>
+		</div>
+		<div>
+			<h5>The Monster</h5>
+			<ul>
+				<li>chocolate graham crackers</li>
+				<li>chocolate marshmallow</li>
+				<li>Reese's peanut butter cup</li>
+				<li>caramel sauce</li>
+			</ul>
+		</div>
+		<div>
+			<h5>Salty-Sweet</h5>
+			<ul>
+				<li>Ritz crackers</li>
+				<li>plain marshmallow</li>
+				<li>Hershey's chocolate</li>
+				<li>peanut butter</li>
+			</ul>
+		</div>
+		<div>
+			<h5>Triple Chocolate</h5>
+			<ul>
+				<li>chocolate graham crackers</li>
+				<li>chocolate marshmallow</li>
+				<li>dark chocolate</li>
+			</ul>
+		</div>
+		<div>
+			<h5>Fruit Salad</h5>
+			<ul>
+				<li>plain graham crackers</li>
+				<li>plain marshmallow</li>
+				<li>white chocolate</li>
+				<li>banana</li>
+				<li>strawberries</li>
+			</ul>
+		</div>
+		<div>
+			<h5>Cookies 'N' Cream</h5>
+			<ul>
+				<li>chocolate graham crackers</li>
+				<li>plain marshmallow</li>
+				<li>Hershey's chocolate</li>
+				<li>peanut butter</li>
+				<li>banana</li>
+			</ul>
+		</div>
+	</section>
+	<section class="bottom-nav">
+		<div>
+			<a href="">Previous</a>
+		</div>
+		<div>
+			<ul>
+				<li><a href="">1</a></li>
+				<li><a href="">2</a></li>
+				<li><a href="">3</a></li>
+				<li><a href="">4</a></li>
+				<li><a href="">5</a></li>
+				<li><a href="">6</a></li>
+				<li><a href="">7</a></li>
+				<li><a href="">8</a></li>
+			</ul>
+		</div>
+		<div>
+			<a href="">Next</a>
+		</div>
+	</section>
+
+	<footer></footer>
 
 	<script src="dist/js/main.js"></script>
 
