--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&family=PT+Serif&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="dist/css/main.css">
 
 </head>
@@ -40,74 +40,128 @@
 
 	<form class="builder">
 		<div>
-			<figure class="graham"></figure>
+			<figure id="graham"></figure>
 			<h2>Frame</h2>
-			<input type="radio" name="frame" value="graham crackers">
+			<section class="row">
+				<input type="radio" name="frame" value="graham crackers">
 				<label for="graham crackers">graham crackers</label>
-			<input type="radio" name="frame" value="cinnamon grahams">
+			</section>
+			<section class="row">
+				<input type="radio" name="frame" value="cinnamon grahams">
 				<label for="cinnamon grahams">cinnamon grahams</label>
-			<input type="radio" name="frame" value="chocolate grahams">
+			</section>
+			<section class="row">
+				<input type="radio" name="frame" value="chocolate grahams">
 				<label for="chocolate grahams">chocolate grahams</label>
-			<input type="radio" name="frame" value="Fudge Stripe cookies">
+			</section>
+			<section class="row">
+				<input type="radio" name="frame" value="Fudge Stripe cookies">
 				<label for="Fudge Stripe cookies">Fudge Stripe cookies</label>
-			<input type="radio" name="frame" value="Oreos">
+			</section>
+			<section class="row">
+				<input type="radio" name="frame" value="Oreos">
 				<label for="Oreos">Oreos</label>
-			<input type="radio" name="frame" value="chocolate chip cookies">
+			</section>
+			<section class="row">
+				<input type="radio" name="frame" value="chocolate chip cookies">
 				<label for="chocolate chip cookies">chocolate chip cookies</label>
-			<input type="radio" name="frame" value="Ritz crackers">
+			</section>
+			<section class="row">
+				<input type="radio" name="frame" value="Ritz crackers">
 				<label for="Ritz crackers">Ritz crackers</label>
-			<input type="radio" name="frame" value="other">
-				<label for="other">Other: </label> <input type="text" name="other-graham">​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​
+			</section>
+			<section class="row">
+				<input type="radio" name="frame" value="other">
+				<label for="other">other: </label> <input type="text" name="other-graham">
+			</section>​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​
 		</div>
 		<div>
-			<figure class="marshmallow"></figure>
+			<figure id="marshmallow"></figure>
 			<h2>Marshmallow</h2>
-			<input type="radio" name="marshmallow" value="plain marshmallow">
+			<section class="row">
+				<input type="radio" name="marshmallow" value="plain marshmallow">
 				<label for="plain marshmallow">plain marshmallow</label>
-			<input type="radio" name="marshmallow" value="chocolate 'mallow">
+			</section>
+			<section class="row">
+				<input type="radio" name="marshmallow" value="chocolate 'mallow">
 				<label for="chocolate 'mallow">chocolate 'mallow</label>
-			<input type="radio" name="marshmallow" value="strawberry 'mallow">
+			</section>
+			<section class="row">
+				<input type="radio" name="marshmallow" value="strawberry 'mallow">
 				<label for="strawberry 'mallow">strawberry 'mallow</label>
-			<input type="radio" name="marshmallow" value="giant 'mallow">
+			</section>
+			<section class="row">
+				<input type="radio" name="marshmallow" value="giant 'mallow">
 				<label for="giant 'mallow">giant 'mallow</label>
-			<input type="radio" name="marshmallow" value="other">
-				<label for="other">Other: </label> <input type="text" name="other-mallow">​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​
+			</section>
+			<section class="row">
+				<input type="radio" name="marshmallow" value="other">
+				<label for="other">other: </label> <input type="text" name="other-mallow">
+			</section>​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​
 		</div>
 		<div>
-			<figure class="candy"></figure>
+			<figure id="candy"></figure>
 			<h2>Candy</h2>
-			<input type="radio" name="candy" value="Hershey's chocolate">
+			<section class="row">
+				<input type="radio" name="candy" value="Hershey's chocolate">
 				<label for="Hershey's chocolate">Hershey's chocolate</label>
-			<input type="radio" name="candy" value="dark chocolate">
+			</section>
+			<section class="row">
+				<input type="radio" name="candy" value="dark chocolate">
 				<label for="dark chocolate">dark chocolate</label>
-			<input type="radio" name="candy" value="chocolate with almonds">
+			</section>
+			<section class="row">
+				<input type="radio" name="candy" value="chocolate with almonds">
 				<label for="chocolate with almonds">chocolate with almonds</label>
-			<input type="radio" name="candy" value="Nutella">
+			</section>
+			<section class="row">
+				<input type="radio" name="candy" value="Nutella">
 				<label for="Nutella">Nutella</label>
-			<input type="radio" name="candy" value="Reese's P.B. Cup">
+			</section>
+			<section class="row">
+				<input type="radio" name="candy" value="Reese's P.B. Cup">
 				<label for="Reese's P.B. Cup">Reese's P.B. Cup</label>
-			<input type="radio" name="candy" value="white chocolate">
+			</section>
+			<section class="row">
+				<input type="radio" name="candy" value="white chocolate">
 				<label for="white chocolate">white chocolate</label>
-			<input type="radio" name="candy" value="other">
-				<label for="other">Other: </label> <input type="text" name="other-candy">​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​
+			</section>
+			<section class="row">
+				<input type="radio" name="candy" value="other">
+				<label for="other">other: </label> <input type="text" name="other-candy">
+			</section>​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​
 		</div>
 		<div>
-			<figure class="accessory"></figure>
+			<figure id="accessory"></figure>
 			<h2>Accessories</h2>
-			<input type="radio" name="accessory" value="peanut butter">
+			<section class="row">
+				<input type="radio" name="accessory" value="peanut butter">
 				<label for="peanut butter">peanut butter</label>
-			<input type="radio" name="accessory" value="banana">
+			</section>
+			<section class="row">
+				<input type="radio" name="accessory" value="banana">
 				<label for="banana">banana</label>
-			<input type="radio" name="accessory" value="strawberries">
+			</section>
+			<section class="row">
+				<input type="radio" name="accessory" value="strawberries">
 				<label for="strawberries">strawberries</label>
-			<input type="radio" name="accessory" value="caramel sauce">
+			</section>
+			<section class="row">
+				<input type="radio" name="accessory" value="caramel sauce">
 				<label for="caramel sauce">caramel sauce</label>
-			<input type="radio" name="accessory" value="cream cheese">
+			</section>
+			<section class="row">
+				<input type="radio" name="accessory" value="cream cheese">
 				<label for="cream cheese">cream cheese</label>
-			<input type="radio" name="accessory" value="bacon">
+			</section>
+			<section class="row">
+				<input type="radio" name="accessory" value="bacon">
 				<label for="bacon">bacon</label>
-			<input type="radio" name="accessory" value="other">
-				<label for="other">Other: </label> <input type="text" name="other-accessory">​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​
+			</section>
+			<section class="row">
+				<input type="radio" name="accessory" value="other">
+				<label for="other">other: </label> <input type="text" name="other-accessory">
+			</section>​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​
 		</div>
 		<section>
 			<label for="smore-name">Name Your S'mores: </label> <input type="text" name="smore-name">
