--- a/index.html
+++ b/index.html
@@ -135,36 +135,38 @@
 			<figure id="accessory"></figure>
 			<h2>Accessories</h2>
 			<section class="row">
-				<input type="radio" name="accessory" value="peanut butter">
+				<input type="checkbox" name="accessory" value="peanut butter">
 				<label for="peanut butter">peanut butter</label>
 			</section>
 			<section class="row">
-				<input type="radio" name="accessory" value="banana">
+				<input type="checkbox" name="accessory" value="banana">
 				<label for="banana">banana</label>
 			</section>
 			<section class="row">
-				<input type="radio" name="accessory" value="strawberries">
+				<input type="checkbox" name="accessory" value="strawberries">
 				<label for="strawberries">strawberries</label>
 			</section>
 			<section class="row">
-				<input type="radio" name="accessory" value="caramel sauce">
+				<input type="checkbox" name="accessory" value="caramel sauce">
 				<label for="caramel sauce">caramel sauce</label>
 			</section>
 			<section class="row">
-				<input type="radio" name="accessory" value="cream cheese">
+				<input type="checkbox" name="accessory" value="cream cheese">
 				<label for="cream cheese">cream cheese</label>
 			</section>
 			<section class="row">
-				<input type="radio" name="accessory" value="bacon">
+				<input type="checkbox" name="accessory" value="bacon">
 				<label for="bacon">bacon</label>
 			</section>
 			<section class="row">
-				<input type="radio" name="accessory" value="other">
+				<input type="checkbox" name="accessory" value="other">
 				<label for="other">other: </label> <input type="text" name="other-accessory">
 			</section>​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​
 		</div>
-		<section>
-			<label for="smore-name">Name Your S'mores: </label> <input type="text" name="smore-name">
+		<section class="build-it">
+			<section class="last-row">
+				<label for="smore-name">Name Your S'mores: </label> <input type="text" name="smore-name">
+			</section>
 			<button>Build It</button>
 		</section>
 	</form>
@@ -273,11 +275,9 @@
 		<div>
 			<h4>Cookies 'N' Cream</h4>
 			<ul>
-				<li>chocolate graham crackers</li>
+				<li>Oreos</li>
 				<li>plain marshmallow</li>
-				<li>Hershey's chocolate</li>
-				<li>peanut butter</li>
-				<li>banana</li>
+				<li>Hershey's Cookies 'n' Creme bar</li>
 			</ul>
 		</div>
 	</section>
@@ -285,7 +285,7 @@
 		<div>
 			<a href="">Previous</a>
 		</div>
-		<div>
+		<div class="pages">
 			<ul>
 				<li><a href="">1</a></li>
 				<li><a href="">2</a></li>
@@ -297,12 +297,10 @@
 				<li><a href="">8</a></li>
 			</ul>
 		</div>
-		<div>
+		<div class="next">
 			<a href="">Next</a>
 		</div>
 	</section>
-
-	<footer></footer>
 
 	<script src="dist/js/main.js"></script>
 
